solving the problem of not found

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_API_URL="https://talk-a-tive-api-eoj0.onrender.com/api"
+REACT_APP_BASE_API_URL="https://talk-a-tive-api-eoj0.onrender.com/api"
+REACT_APP_ENDPOINT="https://talk-a-tive-api-eoj0.onrender.com"
