preparing to host

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_API_URL="https://talk-a-tive.adaptable.app/api"
-REACT_APP_ENDPOINT="https://talk-a-tive.adaptable.app"
+REACT_APP_BASE_API_URL="https://talk-a-tive-api-eoj0.onrender.com/api"
+REACT_APP_ENDPOINT="https://talk-a-tive-api-eoj0.onrender.com"
