--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_API_URL="https://talk-a-tive-api-eoj0.onrender.com/api"
-REACT_APP_ENDPOINT="https://talk-a-tive-api-eoj0.onrender.com"
+REACT_APP_BASE_API_URL="https://chatapp-server-xf5k.onrender.com/api"
+REACT_APP_ENDPOINT="https://chatapp-server-xf5k.onrender.com"
